@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.017.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.022.
 use strict;
 use warnings;
 
@@ -63,6 +63,7 @@ my %WriteMakefileArgs = (
     "Scope::Guard" => 0,
     "Syntax::Keyword::Defer" => "0.05",
     "Syntax::Keyword::Dynamically" => "0.08",
+    "Syntax::Keyword::Match" => "0.04",
     "Syntax::Keyword::Try" => "0.25",
     "Sys::Hostname" => 0,
     "Time::Moment" => "0.44",
@@ -146,6 +147,7 @@ my %FallbackPrereqs = (
   "Scope::Guard" => 0,
   "Syntax::Keyword::Defer" => "0.05",
   "Syntax::Keyword::Dynamically" => "0.08",
+  "Syntax::Keyword::Match" => "0.04",
   "Syntax::Keyword::Try" => "0.25",
   "Sys::Hostname" => 0,
   "Test::CheckDeps" => "0.010",
