@@ -7,6 +7,7 @@ requires 'XS::Parse::Keyword', '>= 0.06';
 requires 'Syntax::Keyword::Dynamically', '>= 0.08';
 requires 'Syntax::Keyword::Try', '>= 0.25';
 requires 'Syntax::Keyword::Defer', '>= 0.05';
+requires 'Syntax::Keyword::Match', '>= 0.04';
 requires 'Future', '>= 0.47';
 requires 'Future::Queue';
 requires 'Future::AsyncAwait', '>= 0.51';
